--- a/README.html
+++ b/README.html
@@ -107,9 +107,9 @@
 <body>
     <div class="container">
         <h1>HaMonitorSentry 高层智能监测系统</h1>
-        <h4>第17届中国大学生计算机设计大赛 人工智能应用-人工智能实践赛 作品</h4>
+        <h4>第26届中国机器人及人工智能大赛 人工智能创新赛 作品</h4>
         <p class="github-link" style="text-align: center;">
-            <a href="https://github.com/mumuyeye/HaMonitorSentry">
+            <a href="https://github.com/PeriodBLUE/HaMonitorSentry">
                 <img src="img/github-mark.png" alt="GitHub">
                 <span>项目代码</span>
             </a>
